    - Widget tooltip change depending on the number of livestreams.
    - fixed not iterable tabs
2.3
    - Fixed refresh button not working
    - Links not underlined in panel
    - Fixed button tooltip
    - No scrollbar in panel for long streamnames
    - Don't hide refresh button when no channel is online
    - add notifications for title change
    - add offline notifications
    - add configuration for notifications
    - fixed favorites fetching
    - fixed removing channels in some cases
    - properly catching most of the errors
2.3.1
    - Corrected some error response handling
2.4
    - Update and First run infopages
    - Ignore spaces in username lists
2.5
    - Use local storage
    - Minor speed-ups
    - Fixed new Twitch channel pages not being recognized
2.6
    - Open archive page for offline channels
    - Offline channels can be shown in panel
    - Only one request per channel is sent a time
    - Disable dragging and highlighting in the panel
2.6.1
    - Fetching all favorites of a user
    - Better request retrying behaviour
    - Fixed sometimes channels not getting removed from panel
2.6.2
    - Fix startup panel & event initialization
2.6.3
    - Advanced network & API error handling
    - Added scrollbar to panel if needed
    - Fixed channel removing for some edge cases
    - Channel gets removed when removed from favorites (on startup only)
    - Major code refactoring
    - Better theme compatibility of panel
2.6.4
    - Actually make the panelcontent overflow again
    - Always show the toolbarbutton when activating it
    - Fixed offline notifications
    - Use unique tab ids from SDK 1.14
    - Updating logging behaviour to match SDK 1.14
    - Fixed loading on startup
2.7
    - Whole new request handling. Should allow better experience with a lot of channels.
    - Better panel: displays title of stream and adapts the hover style to the channels style
    - Loading speed improvements and decreases (so expect it to be the same)
    