@@ -72,12 +72,14 @@ Channel.prototype.addRichInfo=function(channelRspObj) {
         this.image.push(channelRspObj.image_url_medium);
         
         // we don't always get these. Solve that.
-        this.style.bg = channelRspObj.channel_background_color;
-        this.style.color = channelRspObj.channel_text_color;
-        this.style.linkColor = channelRspObj.channel_link_color;
-        this.style.hasBgImage = !!channelRspObj[config.getPreference("justintv.backgroundImageName")];
-        if(this.style.hasBgImage) {
-            this.style.bgImage = channelRspObj[config.getPreference("justintv.backgroundImageName")];
+        if(config.getPreference('panel.advancedStyle')) {
+            this.style.bg = channelRspObj.channel_background_color;
+            this.style.color = channelRspObj.channel_text_color;
+            this.style.linkColor = channelRspObj.channel_link_color;
+            this.style.hasBgImage = !!channelRspObj[config.getPreference("justintv.backgroundImageName")];
+            if(this.style.hasBgImage) {
+                this.style.bgImage = channelRspObj[config.getPreference("justintv.backgroundImageName")];
+            }
         }
 };
 Channel.prototype.toString = function() {
@@ -155,13 +157,13 @@ ChannelList.prototype.setChannels = function(source,channelNames,rich) {
 ChannelList.prototype.addChannel = function(channel,source,rich) {
     var name = rich?channel.login:channel;
     var exists = this.channelExists(name);
-    if(!exists&&(!config.getPreference("panel.advancedStyle")||!rich)) {
+    if(!exists&&(config.getPreference("panel.advancedStyle")||!rich)) {
         this.channels.length++;
         this.channels[name] = new Channel(Channel.QUEUED,source);
         this.channels[name].login = name;
         emit(this, "completechannelinfo", name, source);
     }
-    else if(config.getPreference("panel.advancedStyle")&&rich) {
+    else if(!config.getPreference("panel.advancedStyle")&&rich&&!this.channels[name]) {
         this.channels.length++;
         this.channels[name] = new Channel(Channel.FULL,source);
     }
