@@ -2,6 +2,8 @@
  * Created by Martin Giger
  * Licensed under LGPLv3
  */
+ 
+"use strict";
 
 const Notifications = require("sdk/notifications");
 var tabs = require("sdk/tabs");
@@ -33,7 +35,7 @@ exports.main = function() {
         tabs.open({url:"http://jtvn.humanoids.be/changes-"+self.version+".html",inBackground:true});
         setConfig(); // remove me for 2.7+
     }
-    setConfig();
+    //setConfig();
     _testing = config.getPreference("debug");
     
     // panel init
@@ -64,7 +66,7 @@ exports.main = function() {
     
     if(self.loadReason=='install'||self.loadReason=='enable'||self.loadReason=='upgrade') {        
         console.log("jtvn installed/enabled");
-        this.clear();
+        //this.clear();
         this.init();
         this.attach();
     }
@@ -172,6 +174,7 @@ exports.init = function() {
     data = new ChannelList();
     queue.autoFetch(1000*prefs.updateInterval,1/config.getPreference("queue.ratio"),config.getPreference("queue.maxRequestBatchSize"));
     this.attachChannelList();
+    console.log("reading preferences");
     data.setChannels(new Source(Source.TYPE_USER,Source.TYPE_USER,"justintv"),getUsernames(prefs.channelList),false);
     this.updateFavorites();
 };
