@@ -26,7 +26,7 @@
                 ],
 "name": "justintv-stream-notifications",
 "dependencies": ["vold-utils"],
-"version": "2.6.4",
+"version": "2.7",
 "lib": "lib",
 "fullName": "Justin.tv Stream Notifications",
 "main": "main",
